# templates-ds

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-package.yml
src/: __init__.py
