[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
strict = true
disallow_untyped_calls = false
allow_redefinition = true
plugins = ["pydantic.mypy", "pandera.mypy"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pyright]
reportRedeclaration = false

[tool.poetry]
name = "ds_repo"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
jupyter = "^1.0.0"
pillow = "^10.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
tensorboard = "^2.16.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
torch-tb-profiler = "^0.4.3"
pydantic = {extras = ["mypy"], version = "^2.8.2"}
pandera = {extras = ["mypy"], version = "^0.20.3"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.7"
types-tqdm = "^4.66.0.20240106"
pandas-stubs = "^2.2.2.240603"
data-science-types = "^0.2.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
