[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I", # isort
    "ASYNC",
    "C4",  # comprehensions
    "ISC",  # implicit string concat
    "PT",  # pytest
    "RET",  # return
    "PTH",  # pathlib
    "ERA",  # remove commented code
    "PD",  # pandas
    "PGH",  # use specific error code for lint ignores
    "PL",  # pylint
    "NPY",  # numpy
    "PERF",
    "FURB",
]
ignore = [
    "E501",  # Line too long
    "PTH123",  # open should be replaced by Path.open
    "ISC001",
]

[tool.mypy]
strict = true
disallow_untyped_calls = false
allow_redefinition = true
plugins = ["pydantic.mypy", "pandera.mypy"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true

[project]
name = "ds-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AndBoyS", email = "andboyxd@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pandera[mypy]>=0.22.1",
    "pydantic>=2.10.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.9.2",
    "types-tqdm>=4.67.0.20241221",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
